crates/zizmor/src/audit/snapshots/zizmor__audit__artipacked__tests__fix_creates_with_block_when_missing.snap
---
source: crates/zizmor/src/audit/artipacked.rs
expression: fixed_content
---
name: Test Workflow
on: push
jobs:
  test:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          persist-credentials: false
      - name: Upload artifacts
        uses: actions/upload-artifact@v4
        with:
          name: my-artifact
          path: .
