crates/zizmor/src/audit/snapshots/zizmor__audit__artipacked__tests__fix_merges_into_existing_with_block.snap
---
source: crates/zizmor/src/audit/artipacked.rs
expression: fixed_content
---
name: Test Workflow
on: push
jobs:
  test:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          token: ${{ secrets.GITHUB_TOKEN }}
          fetch-depth: 2
          persist-credentials: false
      - name: Upload artifacts
        uses: actions/upload-artifact@v4
        with:
          name: my-artifact
          path: .
